# virality-analyzer

./: .gitignore  Fase-14-IA.md  Predicción de viralidad.md  README.md  comparativa-spec-viralidad.md  docker-compose.yml  lstart.sh  models.md  plan.md  planV2.md  start.bat  start.sh  status.md  tmp_lastline.txt  wstart.sh
backend/: pyproject.toml  run_worker.py
backend/app/: main.py
backend/app/ai_services/: audio_analyzer.py  audio_emotion.py  audio_events.py  emotion_analyzer.py  explanation_engine.py  explanation_generator.py  feature_store.py  heuristic_analyzer.py  memorability_scorer.py  mock_analyzer.py  provider_exceptions.py  provider_factory.py  retention_predictor.py  speech_analyzer.py  temporal_analyzer.py  text_hook_analyzer.py  virality_predictor.py  visual_analyzer.py  warmup.py
backend/app/ai_services/embeddings/: __init__.py  audio_embedder.py  (+2 more)
backend/app/core/: auth.py  config.py  paths.py
backend/app/processing/: audio_extractor.py  clip_exporter.py  clip_ranker.py  ffmpeg_probe.py  frame_extractor.py  scene_detector.py  timeline_builder.py  window_builder.py
backend/app/schemas/: analysis.py
backend/app/services/: analysis_service.py  queue_service.py  storage_service.py
backend/app/workers/: analysis_worker.py
backend/tests/: conftest.py  test_analysis_guardrails.py  test_analysis_worker.py  test_attention_duration.py  test_audio_features.py  test_clip_ranker.py  test_dataset_build.py  test_embeddings.py  test_hook_score.py  test_provider_factory.py  test_retention_predictor.py  test_text_hook_analyzer.py  test_va_fusion.py
(+62 files in other folders)
