[project]
name = "aurea-backend"
version = "0.1.0"
description = "Aurea Viral Intelligence — FastAPI backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic-settings>=2.0",
    "python-multipart>=0.0.9",
    "opencv-python>=4.8",
    "numpy>=1.24",
]

[project.optional-dependencies]
audio = [
    "librosa>=0.10",
    "soundfile>=0.12",
]
speech = [
    "faster-whisper>=1.0",
]
scene = [
    "scenedetect[opencv]>=0.6",
]
queue = [
    "redis>=5.0",
    "rq>=1.16",
]
all = [
    "aurea-backend[audio,speech,scene,queue]",
]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]
